/*
 * Copyright 2016 Google Inc. All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *  http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";

package org.openyolo;

option java_package = "org.openyolo.proto";

message CredentialRetrieveRequest {
    /**
     * Deprecated since 03/07/17
     * Filtering credentials by authentication domains has been deprecated. The
     * authentication domain must instead be determined implicitly by via the
     * calling package name.
     * @see <a href="https://github.com/openid/OpenYOLO-Android/issues/5">
     *     Original discussion to deprecate</a>
     */
    repeated string       authDomains        = 1 [deprecated=true];
    repeated string       authMethods        = 2; // at least one required
    repeated KeyValuePair additionalParams   = 3;
}

message CredentialRetrieveResponse {
    optional bytes        retrieveIntent   = 1; // required
    repeated KeyValuePair additionalParams = 2;
}

message CredentialRetrieveResponseList {
    repeated CredentialRetrieveResponse responses = 1;
}

message HintRetrieveRequest {
    repeated string                authMethods      = 1; // at least one required
    repeated string                idTypes          = 2; // at least one required
    repeated KeyValuePair          additionalParams = 3;
    optional PasswordSpecification passwordSpec     = 4;
}

message HintRetrieveResponse {
    optional bytes        retrieveIntent = 1; // required
    repeated KeyValuePair additionalParams = 2;
}

message HintRetrieveResponseList {
    repeated HintRetrieveResponse responses = 1;
}

message Credential {
    optional string       id                    = 1; // required
    optional string       authDomain            = 2; // required
    optional string       authMethod            = 3; // required
    optional string       displayName           = 4;
    optional string       displayPictureUri     = 5;
    optional string       password              = 6;
    repeated KeyValuePair additionalProps       = 7;
}

message CredentialList {
    repeated Credential credentials = 1;
}

message KeyValuePair {
    optional string name  = 1; // required
    optional bytes  value = 2;
}

message PasswordSpecification {
    optional string          allowed      = 1; // required
    optional uint32          minSize      = 2; // required
    optional uint32          maxSize      = 3; // required
    repeated RequiredCharSet requiredSets = 4;
}

message RequiredCharSet {
    optional string chars = 1; // required
    optional uint32 count = 2; // required
}